GM-55 update swagger
