# order-service/docs/swagger.json
@@ -27,41 +27,49 @@
                     "application/json"
                 ],
                 "produces": [
-                    "application/json"
+                    "application/vnd.api+json"
                 ],
                 "tags": [
                     "Order"
                 ],
                 "summary": "Create a new order",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "parameters": [
+                    {
+                        "description": "Order request",
+                        "name": "orderRequest",
+                        "in": "body",
+                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/model.OrderRequest"
                         }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.RestError"
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/model.RestError"
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.RestError"
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     },
                     "504": {
                         "description": "Gateway Timeout",
                         "schema": {
-                            "$ref": "#/definitions/model.RestError"
+                            "$ref": "#/definitions/model.ErrorResponse"
                         }
                     }
                 }
@@ -69,6 +77,47 @@
         }
     },
     "definitions": {
+        "jsonapi.ErrorObject": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "Code is an application-specific error code, expressed as a string value.",
+                    "type": "string"
+                },
+                "detail": {
+                    "description": "Detail is a human-readable explanation specific to this occurrence of the problem. Like title, this field’s value can be localized.",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "ID is a unique identifier for this particular occurrence of a problem.",
+                    "type": "string"
+                },
+                "meta": {
+                    "description": "Meta is an object containing non-standard meta-information about the error.",
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "status": {
+                    "description": "Status is the HTTP status code applicable to this problem, expressed as a string value.",
+                    "type": "string"
+                },
+                "title": {
+                    "description": "Title is a short, human-readable summary of the problem that SHOULD NOT change from occurrence to occurrence of the problem, except for purposes of localization.",
+                    "type": "string"
+                }
+            }
+        },
+        "model.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/jsonapi.ErrorObject"
+                    }
+                }
+            }
+        },
         "model.OrderRequest": {
             "type": "object",
             "required": [
@@ -81,10 +130,14 @@
                     "type": "integer"
                 },
                 "method": {
-                    "type": "integer",
                     "enum": [
                         0,
                         1
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.PaymentMethod"
+                        }
                     ]
                 },
                 "user": {
@@ -92,19 +145,16 @@
                 }
             }
         },
-        "model.RestError": {
-            "type": "object",
-            "properties": {
-                "detail": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
+        "model.PaymentMethod": {
+            "type": "integer",
+            "enum": [
+                0,
+                1
+            ],
+            "x-enum-varnames": [
+                "Balance",
+                "Paypal"
+            ]
         }
     }
 }
